2003-10-16  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/new-calendar.c (new_calendar_dialog): moved the
	source creation...
	(create_new_source_with_group): ...here, and made the code create
	the directory for the new calendar.

2003-10-15  Hans Petter Jansson  <hpj@ximian.com>

	* gui/e-select-names-editable.c (e_selct_names_editable_get_address):
	EDestination -> EABDestination.

	* gui/gnome-cal.c (setup_widgets): evolution_dir -> ".evolution".

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-select-names-editable.c (e_select_names_editable_get_address):
	use EABDestination instead of EDestination.

	* gui/gnome-cal.c (gnome_calendar_open): disabled tasks opening code.

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-meeting-list-view.c: adapted to new addressbook API.

	* gui/e-meeting-store.c: adapted to new addressbook API.
	(find_zone): fixed usage of icalcomponent where an icalproperty
	is expected.
	(refresh_busy_periods): fixed call to cal_client_get_free_busy().

	* gui/e-meeting-time-sel.c (e_meeting_time_selector_construct):
	added missing variable.
	
2003-10-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/dialogs/meeting-page.c: #include <gal/e-table/e-table.h>

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-meeting-list-view.c (start_addressbook_server):
	updated to new addressbook API.
	(book_open_cb): removed unneeded function, since we load
	the local addressbook synchronously.

2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/Makefile.am: added missing header directories.

	* pcs/cal-factory.h: include <libical/ical.h>, not <ical.h>.

	* gui/dialogs/meeting-page.c: added missing headers.
	(meeting_page_construct): free 'backend_address' as returned
	by cal_client_get_cal_address(). Removed code to create the
	meeting model's ETable not removed with the merge.

	* gui/e-meeting-list-view.c: updated addressbook headers.

	* gui/gnome-cal.h: added missing ',' in the GnomeCalendarViewType
	enum.
	